GNOME Bugzilla – Bug 644784
Lingering notifications
Last modified: 2011-03-16 12:50:05 UTC
Looks like it's possible to get GConf notifications after we've closed the panel. See backtrace in bug https://bugzilla.redhat.com/show_bug.cgi?id=684368
Easy reproducer: - open the keyboard panel - switch to "all settings" - change the number of workspaces in metacity/mutter - *crash*
commit 6c6c37609c609db9f74220ff6c453cc1457287ca Author: Bastien Nocera <hadess@hadess.net> Date: Wed Mar 16 12:49:03 2011 +0000 keyboard: Fix crasher when num workspace changes And the panel has already been closed. https://bugzilla.gnome.org/show_bug.cgi?id=644784 https://bugzilla.redhat.com/show_bug.cgi?id=684368