keyboard: Fix crasher when num workspace changes

And the panel has already been closed.

https://bugzilla.gnome.org/show_bug.cgi?id=644784
https://bugzilla.redhat.com/show_bug.cgi?id=684368